--- a/css/contacts.css
+++ b/css/contacts.css
@@ -4,7 +4,8 @@ body {
 
 #logo {
     position: fixed;
-    height: 15%;
+    width: 100px;
+    height: 100px;
     left: 28px;
     top: 20px;
 }
@@ -48,7 +49,6 @@ body {
 
 .container {
     width: 100%;
-    min-height: 100vh;
     padding: 5%;
     display: flex;
     align-items: center;
