--- a/css/login.css
+++ b/css/login.css
@@ -31,7 +31,6 @@ body
 
 .input-field {
     border-radius: 12px;
-    font-family: 'Montserrat';
     outline: 0;
     background: #f2f2f2;
     width: 100%;
@@ -107,7 +106,7 @@ section {
     text-align: center;
 }
 
-.login_div, .register_div
+.login_div
 {
     position: absolute;
     width: 100%;
@@ -120,6 +119,11 @@ section {
 {
     transform: rotateY(180deg); 
     text-align: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    backface-visibility: hidden;
 }
 
 
@@ -146,15 +150,15 @@ section {
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background-color: #029561;
-    color: white;
+    background-color: #174c4f;
+    color: #F5E9BE;
     font-size: 16px;
     cursor: pointer;
 }
 
 .buttons:hover{
-    background-color: #00d5124f;
-    color: #FFFFFF;
+    background-color: #2b7e83;
+    color: #F5E9BE;
     opacity: 50%;
 }
 
@@ -175,54 +179,4 @@ section {
 	font-size: 30px;
 }
 
-input[type="text"],input[type="password"]{
-    border-radius: 25px;
-    text-align: center;
-    width: 80%;
-    margin-left: 10%;
-    margin-bottom: 2%;
-    font-family: 'Lato';
-}
-
-#inner-title{
-    display: inline-block;
-    font-size: 0.8em;
-    width: 90%;
-    text-align: center;
-    margin-left: 5%;
-    margin-bottom: 2%;
-    font-family: 'Lato';
-    color: #95060a;
-}
-
-#loginResult{
-    display: inline-block;
-    font-size: 0.8em;
-    width: 90%;
-    text-align: center;
-    margin-left: 5%;
-    margin-bottom: 2%;
-    font-family: 'Lato';
-    color: #95060a;
-}
-
-#userName{
-    display: inline-block;
-    width: 80%;
-    margin-left: 10%;
-    text-align: center;
-}
-
-#logoutButton{
-    width: 20%;
-    margin-left: 40%;
-}
-
-select{
-    width: 30%;
-    margin-left: 35%;
-    margin-top: 2%;
-    font-size: 0.75em;
-    font-family: 'Lato';
-}
 
