--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,25 +1,25 @@
 body {
-    background-color: #F5E9BE;  
-} 
+    background-color: #F5E9BE;
+}
 
-#logo {
+#logo-icon {
     position: fixed;
     width: 100px;
     height: 100px;
-    left: 28px;
+    left: 38px;
     top: 20px;
 }
 
 #logo-text {
     position: fixed;
-    left: 20px;
+    left: 23px;
     top: 100px;
     font-family: 'Abril Fatface';
-    color: #174c4f
+    color: #174c4f;
 }
 
 .btn {
-    position: fixed;
+    position: relative;
     border-style: solid;
     color: #174C4F;
     padding: 12px 16px;
@@ -28,15 +28,15 @@ body {
     border-radius: 15px;
     border-color: #174C4F;
     background-color: #F5E9BE;
-    top: 120px;
-    left: 200px;
+    top: 145px;
+    left: 250px;
 }
 
 .btn::before {
     content: url('../images/person-add.svg');
-    color:#174C4F;
+    color: #174C4F;
     width: 20px;
-    float: left;
+    float: center;
     margin-right: 5px;
     margin-top: -2px;
 }
@@ -47,12 +47,81 @@ body {
     text-decoration: none;
 }
 
+.btn:hover::before {
+    content: url('../images/person-add-hover.svg');
+    color: #F5E9BE;
+    background: #174C4F;
+}
+
+.addContacts {
+    align-items: center;
+    align-self: center;
+}
+
+#addEgg {
+    width: 25%;
+    border-radius: 15px;
+    background: #174C4F;
+    margin: 0 auto 100px;
+    top: 100px;
+    padding: 30px;
+    overflow: hidden;
+    height: 395px;
+    font-family: 'Lato';
+}
+
+#addContactBtn {
+    position: relative;
+
+    border-style: solid;
+    padding: 12px 16px;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 15px;
+    border-color: #174C4F;
+    background-color: #029561;
+    color: #F5E9BE;
+}
+
+.addInput {
+    text-align: center;
+    border-radius: 15px;
+    font-family: 'Lato';
+    background: #f2f2f2;
+    width: 100%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    box-sizing: border-box;
+    font-size: 18px;
+    position: relative;
+    font-family: 'Lato';
+    justify-content: center;
+    display: inline-block;
+}
+
 .container {
     width: 100%;
     padding: 5%;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.searchInput {
+    border-radius: 15px;
+    font-family: 'Lato';
+    background: #f2f2f2;
+    width: 100%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    box-sizing: border-box;
+    font-size: 18px;
+    position: relative;
+    font-family: 'Lato';
+    justify-content: center;
+    display: inline-block;
 }
 
 .search-bar {
@@ -65,7 +134,7 @@ body {
     padding: 10px 20px;
 }
 
-.search-bar input{
+.search-bar input {
     background: transparent;
     flex: 1;
     border: 0;
@@ -80,7 +149,7 @@ body {
 
 }
 
-.search-bar button svg{
+.search-bar button svg {
     width: 25px;
 }
 
@@ -91,6 +160,23 @@ body {
     height: 60px;
     cursor: pointer;
 }
+
+.table-responsive {
+    background-color: #FFFFFF;
+    color: #174C4F;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 15px;
+    font-family: 'Lato';
+    font-size: 20px;
+}
+
+th {
+    background-color: #174C4F;
+    color: #F5E9BE;
+}
+
 
 #logout {
     position: fixed;
@@ -105,7 +191,7 @@ body {
     background: #174C4F;
     padding: 0px;
     text-decoration: none;
-    border-color: #174C4F; 
+    border-color: #174C4F;
     border-style: solid;
 }
 
@@ -114,4 +200,3 @@ body {
     background: #F5E9BE;
     text-decoration: none;
 }
-
